welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:1: error: Missing closing brace `}' assumed here
droite();
^DwarfCode:42: error: ')' expected but '}' found.
}
^